# project-MetroScenarioStudio

./: .dockerignore  .dvcignore  .gitignore  LICENSE.md  MIGRATION_PLAN.md  MetroScenarioStudio.cmd  README.md  RELEVO_Y_PENDIENTES.md  VaciarPuertosMetroScenarioStudio.cmd  dvc.yaml  ruff.toml
.dvc/: config
ml_pipeline/: pyproject.toml
ml_pipeline/artifacts/models/: .gitignore  daily_modeling.dvc
ml_pipeline/artifacts/monitoring/: drift_metrics.json  monitoring_summary.json  pipeline_run_summary.json
ml_pipeline/conf/base/: config.toml
ml_pipeline/conf/local/: config.template.toml
ml_pipeline/docs/04_results/: special_day_error_analysis.md
ml_pipeline/scripts/: _bootstrap.py  build_daily_training_dataset.py  build_operational_datasets.py  check_environment.py  evaluate.py  generate_daily_supervision_artifacts.py  generate_special_day_error_analysis.py  run_baselines.py  run_daily_inference_smoke.py  run_drift_monitoring.py  run_tests.py  start_mlflow.py  train.py
ml_pipeline/src/metro_demand_models/: __init__.py  configuration.py
ml_pipeline/src/metro_demand_models/data/: __init__.py  contracts.py  inspection.py  io.py  modeling.py  validation.py  validation_schema.py
ml_pipeline/src/metro_demand_models/deployment/: __init__.py
ml_pipeline/tests/: conftest.py  test_configuration.py  test_daily_modeling.py  test_data_contracts.py  test_data_io.py  test_imports.py  test_modeling_preparation.py  test_monitoring_contracts.py  test_operational_contracts.py  test_operational_pipeline.py  test_pipeline_paths.py  test_pipeline_run_summary.py  test_special_day_analysis.py
platform/backend/: Dockerfile  README.md  pyproject.toml
platform/backend/metro_scenario_studio/: __init__.py  __main__.py
platform/backend/tests/: conftest.py  test_api_flow.py  test_config_paths.py  test_domain_rules.py  test_excel_contract.py  test_external_data_service.py  test_nlu_service.py  test_prediction_explanation_service.py
(+113 files in other folders)
